@@ -17,6 +17,7 @@
 #include "solarus/entities/CustomEntity.h"
 #include "solarus/entities/Hero.h"
 #include "solarus/entities/MapEntityPtr.h"
+#include "solarus/entities/Npc.h"
 #include "solarus/lowlevel/Debug.h"
 #include "solarus/movements/PathFinding.h"
 #include "solarus/Game.h"
@@ -29,18 +30,43 @@ namespace {
 /**
  * \brief Checks that a path computed corresponds to the expected result.
  */
-void basic_test(TestEnvironment& env) {
+void test_path_to_hero(TestEnvironment& env, MapEntity& entity) {
 
   Hero& hero = env.get_hero();
-  CustomEntity& entity = *env.make_entity<CustomEntity>();
 
   entity.set_top_left_xy(144, 104);
+  entity.notify_position_changed();
   hero.set_top_left_xy(200, 144);
+  hero.notify_position_changed();
+  // FIXME notify automatically from Entity::set_xy()
 
   PathFinding path_finder(env.get_map(), entity, hero);
   std::string path = path_finder.compute_path();
 
-  Debug::check_assertion(path == "7777700", "Unexpected path");
+  const bool traversable = !hero.is_obstacle_for(entity);
+  const std::string expected_path = traversable ? "7777700" : "77777";
+  Debug::check_assertion(path == expected_path,
+      std::string("Unexpected path: '") + path + "', expected '" + expected_path + "'");
+}
+
+/**
+ * \brief Checks path finding on a custom entity towards a hero.
+ */
+void custom_entity_test(TestEnvironment& env) {
+
+  CustomEntity& entity = *env.make_entity<CustomEntity>();
+
+  test_path_to_hero(env, entity);
+}
+
+/**
+ * \brief Checks path finding on an NPC towards a hero.
+ */
+void npc_test(TestEnvironment& env) {
+
+  Npc& entity = *env.make_entity<Npc>();
+
+  test_path_to_hero(env, entity);
 }
 
 }
@@ -52,7 +78,8 @@ int main(int argc, char** argv) {
 
   TestEnvironment env(argc, argv);
 
-  basic_test(env);
+  custom_entity_test(env);
+  npc_test(env);
 
   return 0;
 }
